SIP - Scilab Image Processing Toolbox
Copyright (C) 2002-2010 Ricardo Fabbri
__________________________________________________________________

0.5.0
	+ new function KRC_from_P for decomposing a camera matrix P into intrinsic
	parameters K, rotation R, and camera center C.
	+ new function sip_rq for RQ decomposition (the reverse of qr).
	+ started CMake build system
	+ started interface to www.leptonica.com for grayscale morphology and document
	image analysis.

0.4.2
	+ configure now works for Scilab 5.2.2: fixed problem regarding not finding include
	files
	+ make now works for Scilab 5.2.2: fixed problem compiling libsip.c regarding new
	sci_gateway.h which is now separate from mex.h
	
0.4.1
	+ All help pages were converted to the new DocBook format
	+ imfinfo now exits gracefully when input image is not available (thx to Dean
	Messing for reporting)
	+ Improved linking with newer Image Magick

0.4.0 Major new features!
   This list highlights the main changes from 0.3.1 to 0.4.0. Read the
   previous changelogs for minor improvements and details.
   
   + Compiles with Scilab <= 5.1
	 + Translated most help files to Scilab 5. Help us translate more!
   + new DCT function by Angus Errington
   + new features in interferometry_gui by jocelyn
   + NEW hsv2rgb and rgb2hsv functions to convert between RGB images 
     and HSV (Hue Saturation Intensity) images.
   + NEW radon and iradon functions
   + NEW sip_set_verbose, sip_quiet and sip_wordy functions to adjust 
     the messaging level issued by sip routines. For instance, this 
     may be used to stop imread and mogrify from issuing verbose 
     messages.
   + NEW sip_setenv to set environment variables.
   + imvariance is now coded in C for efficiency
   + unwrapl and unwrapp functions are now coded in C. unwrapl now 
     returns the unwrapped_phase and the phase_jumps.
   + NEW rgbplot function to plot the RGB components of a colormap
   + NEW sip_colormap function