@@ -19,7 +19,8 @@
 # The following variables are generated by configure: 
 #     TOOBOXDIR, SCIDIR
 
-macros_sci = bwborder.sci curvature2d.sci curvature.sci dilate.sci edge.sci erode.sci fftderiv.sci follow.sci fractal.sci getangle.sci gray_imread.sci gsm2d_old.sci gsm2d.sci gsm.sci hough.sci ihough.sci im2bw.sci im2gray.sci imconv.sci imcorrcoef.sci imnoise.sci imphase.sci improfile.sci imroi.sci imshow.sci imxprofile.sci ind2rgb.sci iradon.sci minmax.sci mkfftfilter.sci mkfilter.sci normal.sci ntsc2rgb.sci perim.sci pifilter.sci poledetection.sci radon.sci rgb2ntsc.sci rgbplot.sci sip_approx_true_cmap.sci sip_colormap.sci sipdemo.sci sip_fftshift.sci sip_index_true_cmap.sci sip_quiet.sci sip_wordy.sci unfollow.sci unwrapl.sci unwrapp.sci xgetpixel.sci xor.sci sip_rq.sci KRC_from_P.sci
+macros_sci = bwborder.sci curvature2d.sci curvature.sci dilate.sci edge.sci erode.sci fftderiv.sci follow.sci fractal.sci getangle.sci gray_imread.sci gsm2d_old.sci gsm2d.sci gsm.sci hough.sci ihough.sci im2bw.sci im2gray.sci imconv.sci imcorrcoef.sci imnoise.sci imphase.sci improfile.sci imroi.sci imshow.sci imxprofile.sci ind2rgb.sci iradon.sci minmax.sci mkfftfilter.sci mkfilter.sci normal.sci ntsc2rgb.sci perim.sci pifilter.sci poledetection.sci radon.sci rgb2ntsc.sci rgbplot.sci sip_approx_true_cmap.sci sip_colormap.sci sipdemo.sci sip_fftshift.sci sip_index_true_cmap.sci sip_quiet.sci sip_wordy.sci unfollow.sci unwrapl.sci unwrapp.sci xgetpixel.sci xor.sci sip_rq.sci KRC_from_P.sci quaternion2rot_matrix.sci rot_matrix2quaternion.sci exp2rot_matrix.sci quaternion_matrix.sci quaternion_multiply.sci
+
 
 macros_bin = $(macros_sci:.sci=.bin)
 
