@@ -6,6 +6,9 @@ __________________________________________________________________
 	+ new function KRC_from_P for decomposing a camera matrix P into intrinsic
 	parameters K, rotation R, and camera center C.
 	+ new function sip_rq for RQ decomposition (the reverse of qr).
+	+ new functions to convert between rotation matrices, quaternions, and
+	exponential representations: quaternion2rot_matrix, rot_matrix2quaternion, 
+	exp2rot_matrix, quaternion_matrix, quaternion_multiply
 	+ started CMake build system
 	+ started interface to www.leptonica.com for grayscale morphology and document
 	image analysis.
